[gd_scene load_steps=2 format=3 uid="uid://c3m26r5shq0h0"]

[ext_resource type="Script" uid="uid://hqmgynd4q0e" path="res://ui/game/hud/systems/trainer/trainer_window.gd" id="1_7ix0s"]

[node name="TrainerHUD" type="CanvasLayer"]
script = ExtResource("1_7ix0s")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="Root"]
custom_minimum_size = Vector2(680, 912)
layout_mode = 1
offset_left = 64.0
offset_top = 152.0
offset_right = 664.0
offset_bottom = 1064.0

[node name="Title" type="Label" parent="Root/Panel"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 216.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 22
text = "Тренер"

[node name="CloseButton" type="Button" parent="Root/Panel"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 72.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 22
text = "X"

[node name="FilterRow" type="HBoxContainer" parent="Root/Panel"]
layout_mode = 1
offset_left = 8.0
offset_top = 48.0
offset_right = 416.0
offset_bottom = 90.0
theme_override_constants/separation = 8

[node name="FilterLabel" type="Label" parent="Root/Panel/FilterRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Показать:"

[node name="FilterOption" type="OptionButton" parent="Root/Panel/FilterRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 22

[node name="Scroll" type="ScrollContainer" parent="Root/Panel"]
custom_minimum_size = Vector2(664, 802)
layout_mode = 1
offset_left = 8.0
offset_top = 98.0
offset_right = 672.0
offset_bottom = 362.0
horizontal_scroll_mode = 0

[node name="Margin" type="MarginContainer" parent="Root/Panel/Scroll"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8

[node name="List" type="VBoxContainer" parent="Root/Panel/Scroll/Margin"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6
